examples/datalog/15_arithmetic/37_unary_minus.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_unary
Knowledge graph 'test_unary' created.
Switched to knowledge graph: test_unary
> .kg use test_unary
Switched to knowledge graph: test_unary
> +nums[(10,), (20,), (-5,)].
Inserted 3 fact(s) into 'nums'.
> negated(X, N) :- nums(X), N = 0 - X.
Script error: Parse error: Invalid term: '0 - X'
